--- a/server/tests/drivers/gogrid/fixtures/instances_test_class-10.yml
+++ b/server/tests/drivers/gogrid/fixtures/instances_test_class-10.yml
@@ -3,7 +3,7 @@ recorded_with: VCR 2.2.4
 http_interactions: 
 - request: 
     method: get
-    uri: https://api.gogrid.com/api/grid/server/list?api_key=b5e87458eb2d3297&format=json&sig=957d7c2da92c7ef923c097b257439fde&v=1.9
+    uri: https://api.gogrid.com/api/grid/server/get?api_key=b5e87458eb2d3297&format=json&name=test-instance&sig=a06a8ddc77cef893f61c800ebe34691e&v=1.9
     body: 
       string: ""
     headers: 
@@ -11,11 +11,11 @@ http_interactions:
       - "*/*"
   response: 
     status: 
-      code: 200
-      message: OK
+      code: 400
+      message: Bad Request
     headers: 
       Content-Length: 
-      - "2726"
+      - "222"
       Accept-Ranges: 
       - bytes
       Server: 
@@ -24,19 +24,20 @@ http_interactions:
       - text/html
       Connection: 
       - close
+      - close
       Date: 
-      - Sat, 25 Aug 2012 00:35:30 GMT
+      - Sat, 25 Aug 2012 00:35:42 GMT
       Set-Cookie: 
-      - JSESSIONID=21870CA7AC8EB203A72986DB2DADC30A; Path=/api; Secure
+      - JSESSIONID=C1B4FACA9B3FE53F440E17647949E018; Path=/api; Secure
       X-Mashery-Responder: 
-      - mashery-web3-lax.mashery.com
+      - mashery-web2-lax.mashery.com
     body: 
-      string: "{\"summary\":{\"total\":1,\"start\":0,\"numpages\":0,\"returned\":1},\"status\":\"success\",\"method\":\"/grid/server/list\",\"list\":[{\"os\":{\"id\":73,\"description\":\"CentOS 5.6 (32-bit)\",\"name\":\"CentOS 5.6 (32-bit)\",\"object\":\"option\"},\"ram\":{\"id\":1,\"description\":\"Server with 512MB RAM\",\"name\":\"512MB\",\"object\":\"option\"},\"name\":\"test-instance\",\"state\":{\"id\":3,\"description\":null,\"name\":\"Off\",\"object\":\"option\"},\"isSandbox\":false,\"image\":{\"os\":{\"id\":73,\"description\":\"CentOS 5.6 (32-bit)\",\"name\":\"CentOS 5.6 (32-bit)\",\"object\":\"option\"},\"datacenterlist\":[{\"state\":{\"id\":2,\"description\":\"Image is available for adds\",\"name\":\"Available\",\"object\":\"option\"},\"datacenter\":{\"id\":1,\"description\":\"US West 1 Datacenter\",\"name\":\"US-West-1\",\"object\":\"option\"},\"object\":\"image_datacenter_state\",\"updatedTime\":1294198799000},{\"state\":{\"id\":2,\"description\":\"Image is available for adds\",\"name\":\"Available\",\"object\":\"option\"},\"datacenter\":{\"id\":2,\"description\":\"US East 1 Datacenter\",\"name\":\"US-East-1\",\"object\":\"option\"},\"object\":\"image_datacenter_state\",\"updatedTime\":1294198799000},{\"state\":{\"id\":2,\"description\":\"Image is available for adds\",\"name\":\"Available\",\"object\":\"option\"},\"datacenter\":{\"id\":3,\"description\":\"EU-West-1 Datacenter\",\"name\":\"EU-West-1\",\"object\":\"option\"},\"object\":\"image_datacenter_state\",\"updatedTime\":1294198799000}],\"location\":\"gogrid/GSI-840b854e-4862-49d4-8c83-4768ae48fa3b.img\",\"state\":{\"id\":2,\"description\":\"Image is available for adds\",\"name\":\"Available\",\"object\":\"option\"},\"friendlyName\":\"CentOS 5.6 (32-bit) w/ None\",\"object\":\"serverimage\",\"architecture\":{\"id\":1,\"description\":\"32 bit OS\",\"name\":\"32-bit\",\"object\":\"option\"},\"isPublic\":true,\"billingtokens\":[{\"id\":73,\"price\":0,\"name\":\"CentOS 5.6 (32-bit)\",\"object\":\"billingtoken\"}],\"type\":{\"id\":1,\"description\":\"Web or Application Server\",\"name\":\"Web Server\",\"object\":\"option\"},\"id\":9928,\"isActive\":true,\"gsitype\":{\"id\":1,\"description\":\"Image produced and certified by GoGrid\",\"name\":\"baseGSI\",\"object\":\"option\"},\"price\":0,\"description\":\"CentOS 5.6 (32-bit) w/ None\",\"name\":\"centos5.6_32_base\",\"owner\":{\"id\":-1,\"name\":\"GoGrid\",\"object\":\"customer\"},\"updatedTime\":1294198799000,\"minram\":{\"id\":1,\"description\":\"Server with 512MB RAM\",\"name\":\"512MB\",\"object\":\"option\"}},\"datacenter\":{\"id\":1,\"description\":\"US West 1 Datacenter\",\"name\":\"US-West-1\",\"object\":\"option\"},\"object\":\"server\",\"type\":{\"id\":1,\"description\":\"Web or Application Server\",\"name\":\"Web Server\",\"object\":\"option\"},\"ip\":{\"id\":1107369,\"subnet\":\"173.1.167.112/255.255.255.240\",\"state\":{\"id\":2,\"description\":\"IP is reserved or in use\",\"name\":\"Assigned\",\"object\":\"option\"},\"datacenter\":{\"id\":1,\"description\":\"US West 1 Datacenter\",\"name\":\"US-West-1\",\"object\":\"option\"},\"object\":\"ip\",\"public\":true,\"ip\":\"173.1.167.116\"}}]}"
+      string: "{\"summary\":{\"total\":1,\"start\":0,\"returned\":1},\"status\":\"failure\",\"method\":\"/grid/server/get\",\"list\":[{\"message\":\"No object found that matches your input criteria.\",\"object\":\"error\",\"errorcode\":\"IllegalArgumentException\"}]}"
     http_version: 
-  recorded_at: Sat, 25 Aug 2012 00:35:31 GMT
+  recorded_at: Sat, 25 Aug 2012 00:35:42 GMT
 - request: 
     method: get
-    uri: https://api.gogrid.com/api/grid/server/list?api_key=b5e87458eb2d3297&format=json&sig=0cc2284eefa445267021f5dc9d38ad27&v=1.9
+    uri: https://api.gogrid.com/api/grid/server/list?api_key=b5e87458eb2d3297&format=json&sig=ee296199ced37057161c453b40654833&v=1.9
     body: 
       string: ""
     headers: 
@@ -58,12 +59,12 @@ http_interactions:
       Connection: 
       - close
       Date: 
-      - Sat, 25 Aug 2012 00:35:32 GMT
+      - Sat, 25 Aug 2012 00:35:42 GMT
       Set-Cookie: 
-      - JSESSIONID=FFE4D851C26AE98DDF524D36464B3076; Path=/api; Secure
+      - JSESSIONID=3AD278266864F33E74FAD81F85FD6EE1; Path=/api; Secure
       X-Mashery-Responder: 
-      - mashery-web3-lax.mashery.com
+      - mashery-web1-lax.mashery.com
     body: 
       string: "{\"summary\":{\"total\":1,\"start\":0,\"numpages\":0,\"returned\":1},\"status\":\"success\",\"method\":\"/grid/server/list\",\"list\":[{\"os\":{\"id\":73,\"description\":\"CentOS 5.6 (32-bit)\",\"name\":\"CentOS 5.6 (32-bit)\",\"object\":\"option\"},\"ram\":{\"id\":1,\"description\":\"Server with 512MB RAM\",\"name\":\"512MB\",\"object\":\"option\"},\"name\":\"test-instance\",\"state\":{\"id\":3,\"description\":null,\"name\":\"Off\",\"object\":\"option\"},\"isSandbox\":false,\"image\":{\"os\":{\"id\":73,\"description\":\"CentOS 5.6 (32-bit)\",\"name\":\"CentOS 5.6 (32-bit)\",\"object\":\"option\"},\"datacenterlist\":[{\"state\":{\"id\":2,\"description\":\"Image is available for adds\",\"name\":\"Available\",\"object\":\"option\"},\"datacenter\":{\"id\":1,\"description\":\"US West 1 Datacenter\",\"name\":\"US-West-1\",\"object\":\"option\"},\"object\":\"image_datacenter_state\",\"updatedTime\":1294198799000},{\"state\":{\"id\":2,\"description\":\"Image is available for adds\",\"name\":\"Available\",\"object\":\"option\"},\"datacenter\":{\"id\":2,\"description\":\"US East 1 Datacenter\",\"name\":\"US-East-1\",\"object\":\"option\"},\"object\":\"image_datacenter_state\",\"updatedTime\":1294198799000},{\"state\":{\"id\":2,\"description\":\"Image is available for adds\",\"name\":\"Available\",\"object\":\"option\"},\"datacenter\":{\"id\":3,\"description\":\"EU-West-1 Datacenter\",\"name\":\"EU-West-1\",\"object\":\"option\"},\"object\":\"image_datacenter_state\",\"updatedTime\":1294198799000}],\"location\":\"gogrid/GSI-840b854e-4862-49d4-8c83-4768ae48fa3b.img\",\"state\":{\"id\":2,\"description\":\"Image is available for adds\",\"name\":\"Available\",\"object\":\"option\"},\"friendlyName\":\"CentOS 5.6 (32-bit) w/ None\",\"object\":\"serverimage\",\"architecture\":{\"id\":1,\"description\":\"32 bit OS\",\"name\":\"32-bit\",\"object\":\"option\"},\"isPublic\":true,\"billingtokens\":[{\"id\":73,\"price\":0,\"name\":\"CentOS 5.6 (32-bit)\",\"object\":\"billingtoken\"}],\"type\":{\"id\":1,\"description\":\"Web or Application Server\",\"name\":\"Web Server\",\"object\":\"option\"},\"id\":9928,\"isActive\":true,\"gsitype\":{\"id\":1,\"description\":\"Image produced and certified by GoGrid\",\"name\":\"baseGSI\",\"object\":\"option\"},\"price\":0,\"description\":\"CentOS 5.6 (32-bit) w/ None\",\"name\":\"centos5.6_32_base\",\"owner\":{\"id\":-1,\"name\":\"GoGrid\",\"object\":\"customer\"},\"updatedTime\":1294198799000,\"minram\":{\"id\":1,\"description\":\"Server with 512MB RAM\",\"name\":\"512MB\",\"object\":\"option\"}},\"datacenter\":{\"id\":1,\"description\":\"US West 1 Datacenter\",\"name\":\"US-West-1\",\"object\":\"option\"},\"object\":\"server\",\"type\":{\"id\":1,\"description\":\"Web or Application Server\",\"name\":\"Web Server\",\"object\":\"option\"},\"ip\":{\"id\":1107369,\"subnet\":\"173.1.167.112/255.255.255.240\",\"state\":{\"id\":2,\"description\":\"IP is reserved or in use\",\"name\":\"Assigned\",\"object\":\"option\"},\"datacenter\":{\"id\":1,\"description\":\"US West 1 Datacenter\",\"name\":\"US-West-1\",\"object\":\"option\"},\"object\":\"ip\",\"public\":true,\"ip\":\"173.1.167.116\"}}]}"
     http_version: 
-  recorded_at: Sat, 25 Aug 2012 00:35:32 GMT
+  recorded_at: Sat, 25 Aug 2012 00:35:43 GMT
