--- a/server/tests/drivers/gogrid/fixtures/test_0002_must_return_list_of_realms.yml
+++ b/server/tests/drivers/gogrid/fixtures/test_0002_must_return_list_of_realms.yml
@@ -1,83 +1,69 @@
----
-http_interactions:
-- request:
-    method: get
-    uri: https://api.gogrid.com/api/common/lookup/list?api_key=9bbf139b8b57d967&format=json&lookup=ip.datacenter&sig=87793253b9792183251c078d84eaef1c&v=1.9
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Connection:
-      - close
-      X-Mashery-Responder:
-      - mashery-web2-lax.mashery.com
-      Server:
-      - Apache-Coyote/1.1
-      Set-Cookie:
-      - JSESSIONID=C2F0CE1770142482131436B72401C6EA; Path=/api; Secure
-      Date:
-      - Thu, 23 Aug 2012 11:32:05 GMT
-      Accept-Ranges:
-      - bytes
-      Content-Length:
-      - '367'
-      Content-Type:
-      - text/html
-    body:
-      encoding: US-ASCII
-      string: ! '{"summary":{"total":3,"start":0,"numpages":0,"returned":3},"status":"success","method":"/common/lookup/list","list":[{"id":1,"description":"US
-        West 1 Datacenter","name":"US-West-1","object":"option"},{"id":2,"description":"US
-        East 1 Datacenter","name":"US-East-1","object":"option"},{"id":3,"description":"EU-West-1
-        Datacenter","name":"EU-West-1","object":"option"}]}'
-    http_version: 
-  recorded_at: Thu, 23 Aug 2012 11:30:00 GMT
-- request:
-    method: get
-    uri: https://api.gogrid.com/api/common/lookup/list?api_key=9bbf139b8b57d967&format=json&lookup=ip.datacenter&sig=87793253b9792183251c078d84eaef1c&v=1.9
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Connection:
-      - close
-      X-Mashery-Responder:
-      - mashery-web2-lax.mashery.com
-      Server:
-      - Apache-Coyote/1.1
-      Set-Cookie:
-      - JSESSIONID=3AAB949ED0DB20DDA00B3947908539E4; Path=/api; Secure
-      Date:
-      - Thu, 23 Aug 2012 11:32:06 GMT
-      Accept-Ranges:
-      - bytes
-      Content-Length:
-      - '367'
-      Content-Type:
-      - text/html
-    body:
-      encoding: US-ASCII
-      string: ! '{"summary":{"total":3,"start":0,"numpages":0,"returned":3},"status":"success","method":"/common/lookup/list","list":[{"id":1,"description":"US
-        West 1 Datacenter","name":"US-West-1","object":"option"},{"id":2,"description":"US
-        East 1 Datacenter","name":"US-East-1","object":"option"},{"id":3,"description":"EU-West-1
-        Datacenter","name":"EU-West-1","object":"option"}]}'
-    http_version: 
-  recorded_at: Thu, 23 Aug 2012 11:30:00 GMT
+--- 
 recorded_with: VCR 2.2.4
+http_interactions: 
+- request: 
+    method: get
+    uri: https://api.gogrid.com/api/common/lookup/list?api_key=b5e87458eb2d3297&format=json&lookup=ip.datacenter&sig=729522f93fb25f59441171ad1bd0cd90&v=1.9
+    body: 
+      string: ""
+    headers: 
+      Accept: 
+      - "*/*"
+  response: 
+    status: 
+      code: 200
+      message: OK
+    headers: 
+      Content-Length: 
+      - "367"
+      Accept-Ranges: 
+      - bytes
+      Server: 
+      - Apache-Coyote/1.1
+      Content-Type: 
+      - text/html
+      Connection: 
+      - close
+      Date: 
+      - Sat, 25 Aug 2012 00:35:35 GMT
+      Set-Cookie: 
+      - JSESSIONID=7DEE98491F6888042728F1302093A67C; Path=/api; Secure
+      X-Mashery-Responder: 
+      - mashery-web3-lax.mashery.com
+    body: 
+      string: "{\"summary\":{\"total\":3,\"start\":0,\"numpages\":0,\"returned\":3},\"status\":\"success\",\"method\":\"/common/lookup/list\",\"list\":[{\"id\":1,\"description\":\"US West 1 Datacenter\",\"name\":\"US-West-1\",\"object\":\"option\"},{\"id\":2,\"description\":\"US East 1 Datacenter\",\"name\":\"US-East-1\",\"object\":\"option\"},{\"id\":3,\"description\":\"EU-West-1 Datacenter\",\"name\":\"EU-West-1\",\"object\":\"option\"}]}"
+    http_version: 
+  recorded_at: Sat, 25 Aug 2012 00:35:36 GMT
+- request: 
+    method: get
+    uri: https://api.gogrid.com/api/common/lookup/list?api_key=b5e87458eb2d3297&format=json&lookup=ip.datacenter&sig=0dd9b0d7ef9df072446726f5d8999025&v=1.9
+    body: 
+      string: ""
+    headers: 
+      Accept: 
+      - "*/*"
+  response: 
+    status: 
+      code: 200
+      message: OK
+    headers: 
+      Content-Length: 
+      - "367"
+      Accept-Ranges: 
+      - bytes
+      Server: 
+      - Apache-Coyote/1.1
+      Content-Type: 
+      - text/html
+      Connection: 
+      - close
+      Date: 
+      - Sat, 25 Aug 2012 00:35:36 GMT
+      Set-Cookie: 
+      - JSESSIONID=4968E44D4DE9078964765879599F7D43; Path=/api; Secure
+      X-Mashery-Responder: 
+      - mashery-web1-lax.mashery.com
+    body: 
+      string: "{\"summary\":{\"total\":3,\"start\":0,\"numpages\":0,\"returned\":3},\"status\":\"success\",\"method\":\"/common/lookup/list\",\"list\":[{\"id\":1,\"description\":\"US West 1 Datacenter\",\"name\":\"US-West-1\",\"object\":\"option\"},{\"id\":2,\"description\":\"US East 1 Datacenter\",\"name\":\"US-East-1\",\"object\":\"option\"},{\"id\":3,\"description\":\"EU-West-1 Datacenter\",\"name\":\"EU-West-1\",\"object\":\"option\"}]}"
+    http_version: 
+  recorded_at: Sat, 25 Aug 2012 00:35:36 GMT
