--- a/server/Rakefile
+++ b/server/Rakefile
@@ -116,7 +116,7 @@ task :routes do
   end
 end
 
-DRIVERS = [:mock, :ec2, :rhevm, :google, :gogrid]
+DRIVERS = [:mock, :ec2, :rhevm, :google, :gogrid, :openstack]
 
 desc 'Run all tests'
 task :test do
