Tests: Added nicer output for tests and CI reporter
* The 'turn' gem will format the test output more nicely
  and the output is more readable.

* The 'minitest_reporters' gem will add JUnit XML output
  that is parseable by Jenkins  JUnit output is enabled
  when BUILD_NUMBER environment variable is set.

Signed-off-by: Michal fojtik <mfojtik@redhat.com>

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -10,6 +10,8 @@ group :development do
   gem "rack-test"
   gem "minitest"
   gem "simplecov"
+  gem 'turn'
+  gem 'minitest-reporters'
   gem "webmock"
   gem "vcr"
   gem "aws"
