Do not require turn and minitest-reporters for Ruby 1.8.x
The minitest-reporters gem depends on powerbar which is only available for
Ruby >= 1.9.2; as these gems are not essential, we can just skip them for
Ruby 1.8.x.

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -10,10 +10,12 @@ group :development do
   gem "rack-test"
   gem "minitest"
   gem "simplecov"
-  gem 'turn'
-  gem 'minitest-reporters'
   gem "webmock"
   gem "vcr"
   gem "aws"
 end
 
+group :jenkins do
+  gem 'turn', :platform => "ruby_19"
+  gem 'minitest-reporters', :platform => "ruby_19"
+end
